--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,31 @@
-/vendor/
-node_modules/
+# Laravel
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
 npm-debug.log
 yarn-error.log
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
+# IDEs
+/.idea
+/.vscode
+/.fleet
 
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
+# OS
+.DS_Store
+Thumbs.db
 
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
+# SQLite
+*.sqlite
+*.sqlite-journal
 
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
-
-/public/build
-/storage/pail
-.env.backup
-.env.production
-.phpactor.json
-auth.json
+# Logs
+*.log
