Implementa servicio para la API de TMDB
Implementa un servicio para interactuar con la API de TMDB, permitiendo la obtención de información sobre películas y series (populares, mejor valoradas, próximos estrenos, etc.), así como la búsqueda de contenido multimedia.

Añade configuración para la API de TMDB en el archivo `.env.example` y `config/tmdb.php`.

Incluye una ruta de prueba temporal para verificar el correcto funcionamiento del servicio.

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# TMDB API Configuration
+TMDB_API_KEY=your_tmdb_api_key_here
+TMDB_API_TOKEN=your_tmdb_bearer_token_here
+TMDB_BASE_URL=https://api.themoviedb.org/3
